examples/good/ex4.shl
int a=1;
final int b=12;
int main(){
    int b=13;
    b++;
    if (b==14){
        print("final overshadowing works");
    }
    string a="normal";
    print(a+ " overshadowing works" );
    return 0;
}