examples/bad/ex3.shl
int a =12;
int main(){
    a="string";
    return 0;
}